--- a/style.css
+++ b/style.css
@@ -16,4 +16,85 @@ html { box-sizing: border-box; }
 
 body {
 	background-color: #bdc3c7;
+  width: 350px;
+  color: white;
 }
+
+.jmeno {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.5em;
+}
+
+.hlavicka {
+  position: relative;
+  border-radius: 5px;
+}
+
+.foto {
+  width: 100%;
+}
+
+.logo {
+  background-color: #b92e81;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  position: absolute;
+  bottom: -25px;
+  right: 35px;
+}
+
+.profil {
+  font-family: "Source Sans Pro", sans-serif;
+  background-color: #31363b;
+  margin: 30px;
+  box-shadow: 5px 10px 15px #363636;
+}
+
+.obsah {
+  font-size: 18px;
+  padding: 20px;
+}
+
+.odkazy {
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+}
+
+.odkazy a {
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+  outline: none;
+  display: block;
+  text-align: center;
+}
+
+.portfolio {
+  border-top: 0.5px solid #3f464d;
+}
+.twitter {
+  border-left: 0.5px solid #3f464d;
+}
+
+.facebook,
+.twitter {
+  width: 50%;
+  display: inline-block;
+  border-top: 0.5px solid #3f464d;
+}
+
+.portfolio a:hover {
+  background-color: #e74c3c;
+}
+.facebook a:hover {
+  background-color: #3b5998;
+}
+
+.twitter a:hover {
+  background-color: #1da1f2;
+}
+
+/*ve vývojářských nástrojích je pod class:portfolio tahle značka -  ::marker. V nenastylovaném stavu byl i pod facebookem a twitterem, jak jsem ho odstranila? A k čemu slouží?*/
